# fart-run-awesome-hasselhoff

./: .gitignore  CLAUDE.md  README.MD  analyzer.py  claude-wrapper.sh  config.toml  dashboard.py  db.py  fart-run-awesome-hasselhoff.desktop  fartrun-dev-health-checks.md  hook.py  importer.py  monitor.db-shm  monitor.db-wal  pyproject.toml  sounds  tools.json
claude_nagger/: assets_farts  assets_hasselhoff
core/: activity_tracker.py  alerts.py  app.py  autodiscovery.py  calculator.py  changelog_watcher.py  cli.py  code_searcher.py  config.py  context7_mcp.py  context_fetcher.py  feature_grouper.py  file_explainer.py  frozen_manager.py  git_educator.py  haiku_client.py  history.py  lang_detect.py  mcp_installer.py  mcp_server.py  md_fetcher.py  models.py  parser.py  platform.py  plugin.py  plugin_loader.py  project_detector.py  prompt_builder.py  prompt_parser.py  repo_scanner.py  safety_net.py  snapshot_manager.py  sqlite_db.py  stack_detector.py  status_checker.py  tips.py  token_parser.py  usage_analyzer.py
crates/health/: Cargo.toml  pyproject.toml
crates/health/src/: common.rs  dead_code.rs  duplicates.rs  entry_points.rs  file_tree.rs  lib.rs  module_map.rs  monsters.rs  overengineering.rs  reusable.rs  tech_debt.rs
crates/health/src/ux_sanity/: issue.rs  mod.rs  parser.rs
crates/health/src/ux_sanity/rules/: async_handler_no_catch.rs  button_no_handler.rs  effect_no_deps.rs  handler_called.rs  mod.rs  setstate_in_render.rs
crates/sentinel/: Cargo.toml  pyproject.toml
crates/sentinel/src/: autostart.rs  container_escape.rs  crontab.rs  env_leak.rs  filesystem.rs  git_hooks.rs  lib.rs  network.rs  processes.rs  secrets.rs  supply_chain.rs
data/: curated.md  education.md  hooks_guide_en.py  hooks_guide_ua.py  resources.md  ui_elements.py
docs/: 2026-04-15-activity-log-phase1-plan.md  2026-04-15-health-checks-phase1-design.md  2026-04-15-health-checks-phase1-plan.md  2026-04-15-health-phase2-dead-code-design.md  2026-04-15-health-phase2-dead-code-plan.md  2026-04-15-health-phase3a-tech-debt-design.md  2026-04-15-snapshots-design.md  2026-04-15-snapshots-plan.md  2026-04-16-tech-debt-spec.md  SPEC-activity-log.md
gui/: app.py  changelog_popup.py  copyable_table.py  copyable_widgets.py  docker_tab.py  fmt_utils.py  monitor_alerts.py  ports_tab.py  sdk_context_popup.py  security_explanations.py  security_tab.py  sidebar.py  statusbar.py  ui_dictionary_popup.py  win95.py  win95_popup.py
i18n/: en.py  ua.py
tests/: conftest.py  test_activity_models.py  test_activity_tracker.py  test_alerts.py  test_app.py  test_autodiscovery.py  test_changelog_watcher.py  test_cli.py  test_code_searcher.py  test_config.py  test_context7_mcp.py  test_context_fetcher.py  test_copyable_section.py  test_docker_collector.py  test_docker_plugin.py  test_duplicates.py  test_feature_grouper.py  (+57 more)
(+173 files in other folders)
