[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-monitor"
version = "2.0.0"
description = "Dev environment monitoring platform with plugin architecture"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40",
    "docker>=7.0",
    "psutil>=5.9",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
security = ["pip-audit>=2.6"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dev-monitor = "core.app:main"
