[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-monitor"
version = "3.0.0"
description = "Dev environment monitoring platform — Win95 style"
requires-python = ">=3.11"
dependencies = [
    "PyQt5>=5.15",
    "docker>=7.0",
    "psutil>=5.9",
    "aiosqlite>=0.19",
    "tomli_w>=1.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
security = ["pip-audit>=2.6"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
dev-monitor-gui = "gui.app:main"
fartrun = "core.cli:main"
fartrun-mcp = "core.mcp_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
